--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <section>
         <div class="container hero-block">
-          <h2 hidden>About us</h2>
+          <h2 class="visually-hidden">About us</h2>
           <ul class="hero-block-list">
             <li class="charast">
               <h3 class="hero-list">Strategy</h3>
@@ -120,12 +120,12 @@
           <h2 class="hero-header">Our Portfolio</h2>
 
           <ul class="hero-team hero-featr-cont">
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img src="./images/banking.jpg" alt="Banking App" width="360" />
               <h3 class="hero-names">Banking App</h3>
               <p class="hero-jobs">App</p>
             </li>
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img
                 src="./images/cashless.jpg"
                 alt="Cashless Payment"
@@ -135,7 +135,7 @@
               <h3 class="hero-names">Cashless Payment</h3>
               <p class="hero-jobs">Marketing</p>
             </li>
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img
                 src="./images/meditation.jpg"
                 alt="Meditation App"
@@ -144,12 +144,12 @@
               <h3 class="hero-names">Meditation App</h3>
               <p class="hero-jobs">App</p>
             </li>
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img src="./images/taxi.jpg" alt="Taxi Service" width="360" />
               <h3 class="hero-names">Taxi Service</h3>
               <p class="hero-jobs">Marketing</p>
             </li>
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img
                 src="./images/screen.jpg"
                 alt="Screen Illustrations"
@@ -158,7 +158,7 @@
               <h3 class="hero-names">Screen Illustrations</h3>
               <p class="hero-jobs">Design</p>
             </li>
-            <li class="hero-team-card team-card-scnd">
+            <li class="team-card-scnd">
               <img src="./images/online.jpg" alt="Online Courses" width="360" />
               <h3 class="hero-names">Online Courses</h3>
               <p class="hero-jobs">Marketing</p>
