--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container header-cont">
         <nav class="navg">
           <a href="./index.html" class="header-logo"
