--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <button type="button" class="hero-button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="hero-charast">
         <div class="container hero-block">
           <h2 class="visually-hidden">About us</h2>
           <ul class="hero-block-list">
@@ -93,75 +93,107 @@
           <h2 class="hero-header">Our Team</h2>
           <ul class="hero-team">
             <li class="hero-team-card">
-              <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
-              <h3 class="hero-names">Mark Guerrero</h3>
-              <p class="hero-jobs">Product Designer</p>
+              <div class="name-cont">
+                <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
+                <h3 class="hero-names">Mark Guerrero</h3>
+                <p class="hero-jobs">Product Designer</p>
+              </div>
             </li>
             <li class="hero-team-card">
-              <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-              <h3 class="hero-names">Tom Ford</h3>
-              <p class="hero-jobs">Frontend Developer</p>
+              <div class="name-cont">
+                <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
+                <h3 class="hero-names">Tom Ford</h3>
+                <p class="hero-jobs">Frontend Developer</p>
+              </div>
             </li>
             <li class="hero-team-card">
-              <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
-              <h3 class="hero-names">Camila Garcia</h3>
-              <p class="hero-jobs">Marketing</p>
+              <div class="name-cont">
+                <img
+                  src="./images/camila.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                />
+                <h3 class="hero-names">Camila Garcia</h3>
+                <p class="hero-jobs">Marketing</p>
+              </div>
             </li>
             <li class="hero-team-card">
-              <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
-              <h3 class="hero-names">Daniel Wilson</h3>
-              <p class="hero-jobs">UI Designer</p>
+              <div class="name-cont">
+                <img
+                  src="./images/daniel.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                />
+                <h3 class="hero-names">Daniel Wilson</h3>
+                <p class="hero-jobs">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="features">
         <div class="container">
           <h2 class="hero-header">Our Portfolio</h2>
 
           <ul class="hero-team hero-featr-cont">
             <li class="team-card-scnd">
-              <img src="./images/banking.jpg" alt="Banking App" width="360" />
-              <h3 class="hero-names">Banking App</h3>
-              <p class="hero-jobs">App</p>
+              <div class="app">
+                <img src="./images/banking.jpg" alt="Banking App" width="360" />
+                <h3 class="hero-names">Banking App</h3>
+                <p class="hero-jobs">App</p>
+              </div>
             </li>
             <li class="team-card-scnd">
-              <img
-                src="./images/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="app">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
 
-              <h3 class="hero-names">Cashless Payment</h3>
-              <p class="hero-jobs">Marketing</p>
+                <h3 class="hero-names">Cashless Payment</h3>
+                <p class="hero-jobs">Marketing</p>
+              </div>
             </li>
             <li class="team-card-scnd">
-              <img
-                src="./images/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <h3 class="hero-names">Meditation App</h3>
-              <p class="hero-jobs">App</p>
+              <div class="app">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <h3 class="hero-names">Meditation App</h3>
+                <p class="hero-jobs">App</p>
+              </div>
             </li>
             <li class="team-card-scnd">
-              <img src="./images/taxi.jpg" alt="Taxi Service" width="360" />
-              <h3 class="hero-names">Taxi Service</h3>
-              <p class="hero-jobs">Marketing</p>
+              <div class="app">
+                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" />
+                <h3 class="hero-names">Taxi Service</h3>
+                <p class="hero-jobs">Marketing</p>
+              </div>
             </li>
             <li class="team-card-scnd">
-              <img
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h3 class="hero-names">Screen Illustrations</h3>
-              <p class="hero-jobs">Design</p>
+              <div class="app">
+                <img
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <h3 class="hero-names">Screen Illustrations</h3>
+                <p class="hero-jobs">Design</p>
+              </div>
             </li>
             <li class="team-card-scnd">
-              <img src="./images/online.jpg" alt="Online Courses" width="360" />
-              <h3 class="hero-names">Online Courses</h3>
-              <p class="hero-jobs">Marketing</p>
+              <div class="app">
+                <img
+                  src="./images/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <h3 class="hero-names">Online Courses</h3>
+                <p class="hero-jobs">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
