--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
           <h2 class="hero-header">Our Portfolio</h2>
 
-          <ul class="hero-team hero-featr-cont">
+          <ul class="hero-featr-cont">
             <li class="team-card-scnd">
               <img src="./images/banking.jpg" alt="Banking App" width="360" />
 
